src/test/deca/context/invalid/objets/07InvalidReturnType.deca
class Invalid {
    boolean b = false;

    int getB() {
        return b;
    }
}